# igc_parser

./: .gitignore  CMakeLists.txt  config.m4  convert.c  convert.h  coordinate.c  coordinate.h  coordinate_set.c  coordinate_set.h  coordinate_subset.c  coordinate_subset.h  distance_map.c  distance_map.h  geometry.c  geometry.h  geometry.sublime-project  geometry.sublime-workspace  helmert.c  helmert.h  igc_parser  igc_parser.c  igc_parser.h  main.h  makefile  string_manip.c  string_manip.h  task.c  task.h  validate.c  validate.h
formatter/: formatter.h  formatter_js.c  formatter_js.h  formatter_js.lo  formatter_kml.c  formatter_kml.h  formatter_kml.lo  formatter_kml_comp.c  formatter_kml_comp.h  formatter_kml_earth.c  formatter_kml_earth.h  formatter_kml_earth.lo  formatter_kml_split.c  formatter_kml_split.h  formatter_kml_split.lo  kml.c  kml.h
formatter/templates/: comp.js.cs.json  comp.kml.cs.xml  flight.earth.kml.cs.xml  flight.kml.cs.xml  flight.split.kml.cs.xml
include/clearsilver/: clearsilver.h  config.h
include/json/: CMakeLists.txt  dump.c  load.c  (+24 more)
statistics/: element.c  element.h  element.lo  group.c  group.h  group.lo
test/: test.php  test.sh  test0.js  test0.kml  test0_earth.kml  test0_split.kml  test1.js  test1.kml  test1_earth.kml  test1_split.kml  test2.js  test2.kml  test2_earth.kml  test2_split.kml  test3.js  test3.kml  test3_earth.kml  test4.js  test4.kml  test4_earth.kml  test4_split.kml  test5.js  test5.kml  test5_earth.kml  test5_split.kml  test6.js  test6.kml  test6_earth.kml  test6_split.kml  test7.js  test7.kml  test7_split.kml  tests.cpp
(+69 files in other folders)
